--- a/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
+++ b/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 <section class="intro">
     <div class="container">
         <img class="title" src="/images/space-game-title.svg" alt="Space Game">
-        <p>Welcom to the oficial Space Game site!</p>
-        <p>this is about Kenny learning Azure DevOps</p>
+        <p>Welcom to the official Space Game site!</p>
+        <p>this is about learning Azure DevOps</p>
     </div>
 </section>
 <section class="download">
